------------------------------------------------------------------------
r1195 | gaser | 2017-10-17 00:31:23

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_conf_stools.m
M       cat_stat_check_cov.m
M       cat_surf_resamp.m
M       cat_surf_resamp_freesurfer.m
 M      templates_surfaces/lh.patch.freesurfer.gii
 M      templates_surfaces/lh.sqrtsulc.central.freesurfer.gii
 M      templates_surfaces/rh.patch.freesurfer.gii
 M      templates_surfaces/rh.sqrtsulc.central.freesurfer.gii

Changed: Prepared some function for dealing with merged hemisphere meshes.
------------------------------------------------------------------------
r1194 | gaser | 2017-10-11 17:06:05 +0200 (Mi, 11 Okt 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_stools.m
M       cat_surf_results.m

Changed: Added mapping function to use weighted average with gaussian kernel
so that values at the border are weighted with 50% and center with 100% with
a gaussian shape.

------------------------------------------------------------------------
r1193 | gaser | 2017-10-11 00:45:20 +0200 (Mi, 11 Okt 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m
M       templates_surfaces/templates_surfaces.man

(1) Changed: Added flatmap view and atlas border overlay to
    cat_surf_results.m
(2) Changed: Upadted surface template description.

------------------------------------------------------------------------
r1192 | gaser | 2017-10-09 17:54:51 +0200 (Mo, 09 Okt 2017) | 17 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_render.m
M       cat_surf_render2.m
M       cat_surf_results.m
M       html/cat.html
A       templates_surfaces/lh.patch.freesurfer.gii
A       templates_surfaces/lh.sqrtsulc.central.freesurfer.gii
A       templates_surfaces/rh.patch.freesurfer.gii
A       templates_surfaces/rh.sqrtsulc.central.freesurfer.gii
M       templates_surfaces/templates_surfaces.man
